css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');

/*
*{
    padding: 0;
    margin: 0;
    font-family: 'Lato', sans-serif;
    box-sizing: border-box;
}
*/

.grid-container {
    display: grid;
    grid-template-areas: 
    'header' 
    'content'
    'categories'
    'suggested'
    'footer';
}

header{
    grid-area: header;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    height: fit-content;
}

header nav{
    display: inline-block;
}

header ul{
    list-style-type: none;
    transition: all 1s;
}

header nav > ul {
    list-style-type: none;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

header ul li{
    font-size: 1.2rem;
    position: relative;
    transition: all 1s;
}

header ul li a{
    text-decoration: none;
    color: #000;
}

header .home{
    height: 3rem;
}

header nav{
    padding: 0 !important;
}

header nav .navbar-brand{
    padding: 0 !important;
}

header nav .container-fluid{
    padding: 0;
}

header nav .navbar-collapse ul li a{
    height: 4rem;
}

a.nav-link.active{
    color: cadetblue !important;
    border-bottom: 3px cadetblue solid;
}

a.nav-link{
    margin-left: 16px;
    margin-right: 16px;
    font-size: 1.1rem;
    line-height: 4rem;
    padding: 0;
}

section#home{
    grid-area: content;
    margin-top: 1rem;
}

section#home h1{
    text-align: center;
    margin-bottom: 2rem;
}

section#table-suggested{
    grid-area: suggested
}

section#items-container{
    grid-area: categories;
}

section#video{
    grid-area: video;
    display: none;
}

iframe{
    border-radius: 10px;
}

a {
    color: cadetblue;
}

ul.sub-menu{
    visibility: hidden;
    opacity: 0;
    display: none;

    position: absolute;
    padding: 12px 16px;
    z-index: 1;

    border-radius: 0.32rem;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);

    background-color: white;
}

ul li:hover ul.sub-menu{
    visibility: visible;
    opacity: 1;

    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

footer{
    grid-area: footer;
}

.btn-primary{
    border-color: cadetblue;
    background-color: cadetblue;
}

.main-banner-image{
    background-image: url(../images/banner_home.jpeg);
    background-size: cover;
    background-position: center;
    width: 100vw;
    height: 400px;
    padding: 0;
    
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.main-banner-text{
    background: rgba(255,255,255,0.9);
}

.card-container{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.card{
    margin: 10px 0px;
    width: 100%;
}

.logo{
    animation: pulse 1.5s infinite alternate;
}

@keyframes pulse{
    from{
        transform: scale(1);
    }
    to{
        transform: scale(1.2);
    }
}

@media only screen and (min-width: 768px) {
    /* For tablets: */
    .card-container{
        justify-content: center;
    }

    .card{
        width: 72%;
    }

    section#video{
        display: block;
    }
    
    .grid-container {
        display: grid;
        grid-template-areas: 
        'header' 
        'content'
        'categories'
        'video'
        'suggested'
        'footer';
    }
  }
  
  @media only screen and (min-width: 1024px) {
    /* For desktop: */
    .card-container{
        justify-content: space-evenly;
    }

    .card{
        width: 18rem;
    }

    section#video{
        display: block;
    }

    .grid-container {
        display: grid;
        grid-template-areas: 
        'header' 
        'content'
        'categories'
        'video'
        'suggested'
        'footer';
    }

    iframe{
        width: 960px;
        height: 480px;
        border-radius: 10px;
    }

  }

